Actualizacion del front-end, sistema mas responsive e UIX mas entendible.
